--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,18 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
+	implementation 'net.sf.jasperreports:jasperreports:6.20.6'
+	implementation 'com.github.librepdf:openpdf:1.3.30'
+	implementation 'com.lowagie:itext:2.1.7'
+	implementation('net.sf.jasperreports:jasperreports:6.20.6') {
+		exclude group: 'commons-logging', module: 'commons-logging'
+	}
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
