Modulo basico de mesas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.password=1992
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 
+logging.level.root=DEBUG
+logging.level.com.pangosoft.restaurant=DEBUG
+
 #TIMEZONE
 spring.jackson.time-zone=America/Guatemala
 spring.jackson.locale=es_GT
