--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=restaurant-api
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_api_db?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_api_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1992
 
